Update leaders page

--- a/app/views/pages/leaders.html.erb
+++ b/app/views/pages/leaders.html.erb
@@ -15,8 +15,25 @@
       </div>
       <div class="row leader-bio">
         <p>
-          Jamie currently serves as Operations Manager for Energy Assistance Services at The Salvation Army Western Michigan Northern Indiana Division where she provides oversight and coordination for all facets of the statewide program operations. 
+          Jamie currently serves as Operations Manager for Energy Assistance Services at The Salvation Army Western Michigan Northern Indiana Division where she provides oversight and coordination for all facets of the statewide program operations.
           <br>Born and raised in Grand Rapids, Michigan, she earned her Bachelor of Science degree in History with a minor in Psychology from Grand Valley State University. After working in retail management for more than a dozen years, she started a family with her husband, Jason. They currently reside in Coopersville, MI with their daughters, Annabella and Lillian. Jamie is the current LOCODI US Board President.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= image_tag 'LCox.png', class: "thumbnail leader-thumb" %>
+      </div>
+      <div class="row leader-title">
+        <h4>Laurie Cox</h4>
+        <h5>Board Vice President (US)</h5>
+      </div>
+      <div class="row leader-bio">
+        <p>
+          Lori grew up in Grand Rapids, MI and currently resides in Oregon City, OR with her husband and son. She is a stay-at-home mom who also works from home writing resumes and doing editorial work. Her love of children is shown in her past volunteering at junior high and high school youth group, led by her husband, as well as in her almost 7 years as a high school assistant coach for cross country and track. Laurie is the Vice President of the LOCODI US Board.
         </p>
       </div>
     </div>
@@ -35,6 +52,23 @@
         <p>
           Rebecca Olupot currently serves as a Missionary in Jinja, Uganda with her husband Emmanuel (a.k.a. Ruudy). For the past 4 years she had served in Soroti, Uganda providing spiritual counseling to former child soldiers and youth from various villages in the Soroti area. Rebecca felt called to the mission field since she was in high school and has visited many African countries in pursuit of her calling.
           <br>She received her bachelor of arts in Social Work from Gordon College. She loves to see children and youth realize who they are in Christ and assist them to begin living lives with purpose. She is the current LOCODI Uganda Board Chairperson.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= image_tag 'BKragt.png', class: "thumbnail leader-thumb" %>
+      </div>
+      <div class="row leader-title">
+        <h4>Ben Kragt</h4>
+        <h5>Board Member (USA)</h5>
+      </div>
+      <div class="row leader-bio">
+        <p>
+          Ben Kragt lives in Grand Rapids, MI with his wife and two children. He recently completed a 5-year position as Maintenance Director for Pine Valley Bible Camp in Ellwood City, PA. Ben and his family have been called to serve in Uganda and are currently raising support. You can pledge your support to the Kragt family on the <%= link_to "Support Page", support_path %>
         </p>
       </div>
     </div>
@@ -78,23 +112,6 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= image_tag 'HAgnes.png', class: "thumbnail leader-thumb" %>
-      </div>
-      <div class="row leader-title">
-        <h4>Hellen Agnes Alengo</h4>
-        <h5>Treasurer (Uganda)</h5>
-      </div>
-      <div class="row leader-bio">
-        <p>
-          Hellen Agnes Alengo is a passionate Ugandan Christian Lady. She is a professional accountant and is currently working as an accountant in one of the largest schools in Uganda. She has a passion for children and this has led her to sponsor over 7 different children orphan over the years. Hellen has a big heart and is full of compassion for the unloved. Hellen is the Treasurer of the LOCODI Uganda Board.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="<%= @col_width %>">
-    <div class="well leader-well">
-      <div class="row leader-photo">
         <%= image_tag 'SMaat.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
@@ -103,7 +120,7 @@
       </div>
       <div class="row leader-bio">
         <p>
-          Sheryl Maat grew up in Grand Rapids, Michigan and currently resides in Cheney, Washington.  She and her husband attend Life Center Foursquare Church where she leads a weekly Women’s Bible Study.  Sheryl also teaches personal finance classes at Anna Ogden Hall, a local Women’s addiction recovery home in Spokane, Washington.  Sheryl’s passion for children is reflected in her past volunteer work, which includes teaching Sunday school, Director of Children’s Ministries, Director of MOPS, and Moms In Touch International.  Sheryl has been married to Ray for 31 years; they have four children and one grandson: Samantha & Nate and their son Colt, Christian & Katlyn, Alex, and Kirk.  Sheryl earned a B.S. degree in Business Management from Whitworth University, and currently works at Washington Trust Bank in the Commercial Lending Department. She is serving as the Treasurer of the LOCODI US Board. 
+          Sheryl Maat grew up in Grand Rapids, Michigan and currently resides in Cheney, Washington.  She and her husband attend Life Center Foursquare Church where she leads a weekly Women’s Bible Study.  Sheryl also teaches personal finance classes at Anna Ogden Hall, a local Women’s addiction recovery home in Spokane, Washington.  Sheryl’s passion for children is reflected in her past volunteer work, which includes teaching Sunday school, Director of Children’s Ministries, Director of MOPS, and Moms In Touch International.  Sheryl has been married to Ray for 31 years; they have four children and one grandson: Samantha & Nate and their son Colt, Christian & Katlyn, Alex, and Kirk.  Sheryl earned a B.S. degree in Business Management from Whitworth University, and currently works at Washington Trust Bank in the Commercial Lending Department. She is serving as the Treasurer of the LOCODI US Board.
         </p>
       </div>
     </div>
