corrections on leaders and join pages

--- a/app/views/pages/leaders.html.erb
+++ b/app/views/pages/leaders.html.erb
@@ -28,12 +28,12 @@
         <%= image_tag 'LCox.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
-        <h4>Laurie Cox</h4>
+        <h4>Lori Cox</h4>
         <h5>Board Vice President (US)</h5>
       </div>
       <div class="row leader-bio">
         <p>
-          Lori grew up in Grand Rapids, MI and currently resides in Oregon City, OR with her husband and son. She is a stay-at-home mom who also works from home writing resumes and doing editorial work. Her love of children is shown in her past volunteering at junior high and high school youth group, led by her husband, as well as in her almost 7 years as a high school assistant coach for cross country and track. Laurie is the Vice President of the LOCODI US Board.
+          Lori grew up in Grand Rapids, MI and currently resides in Oregon City, OR with her husband and son. She is a stay-at-home mom who also works from home writing resumes and doing editorial work. Her love of children is shown in her past volunteering at junior high and high school youth group, led by her husband, as well as in her almost 7 years as a high school assistant coach for cross country and track. Lori is the Vice President of the LOCODI US Board.
         </p>
       </div>
     </div>
@@ -68,7 +68,7 @@
       </div>
       <div class="row leader-bio">
         <p>
-          Ben Kragt lives in Grand Rapids, MI with his wife and two children. He recently completed a 5-year position as Maintenance Director for Pine Valley Bible Camp in Ellwood City, PA. Ben and his family have been called to serve in Uganda and are currently raising support. You can pledge your support to the Kragt family on the <%= link_to "Support Page", support_path %>
+          Ben Kragt lives in Grand Rapids, MI with his wife and two children. He recently completed a 5-year position as Maintenance Director for Pine Valley Bible Camp in Ellwood City, PA. Ben and his family have been called to serve in Uganda and are currently raising support. You can pledge your support to the Kragt family on the <%= link_to "Support Page", support_path %>. Ben is a board member for LOCODI US.
         </p>
       </div>
     </div>
