fix HYSiFrame scrolling

--- a/app/views/pages/sponsor_child.html.erb
+++ b/app/views/pages/sponsor_child.html.erb
@@ -6,8 +6,8 @@
   <div class="col-xs-12">
     <div class="well">
       <p>Your donations are tax deductible in the United States. LOCODI is a 501c3 organization, EIN # 47-3250222</p>
-      <iframe class="hysiframe" src="https://app.helpyousponsor.com/frontend/view_all/91/356" style="border:0px #FFFFFF none;" name="HYSiFrame" scrolling="no" frameborder="1" height="1500px" marginheight="0px" marginwidth="0px" width="100%"></iframe>
-      
+      <iframe class="hysiframe" src="https://app.helpyousponsor.com/frontend/view_all/91/356" style="border:0px #FFFFFF none;" name="HYSiFrame" scrolling="yes" frameborder="1" height="600px" marginheight="0px" marginwidth="0px" width="100%"></iframe>
+
     </div>
   </div>
 </div>
