V2 specs in README, minor tweaks with clients

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,8 @@
     <h3>
       Raising an empowered generation...
     </h3>
-    <p> 
-      LOCODI was started by a group of passionate Christians in Soroti, Uganda. We are creating a new generation of citizens that are focused on compassion and demonstrating Christ's love. We invite you to become a part of our work. 
+    <p>
+      LOCODI was started by a group of passionate Christians in Soroti, Uganda. We are creating a new generation of citizens that are focused on compassion and demonstrating Christ's love. We invite you to become a part of our work.
       <%= link_to "Join us today!", join_path %>
     </p>
   </div>
@@ -25,7 +25,7 @@
 
 <div class="content-block row">
   <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-    <%= image_tag "child_reading.jpg", class: "waterfall-img" %>
+    <iframe class="hysiframe" src="https://app.helpyousponsor.com/frontend/view_entity/91/428/17034/836b187f76794495d4ac485903575e0c3b1ea298" style="border:0px #FFFFFF none;" name="HYSiFrame" scrolling="yes" frameborder="1" height="600px" marginheight="0px" marginwidth="0px" width="100%"></iframe>
   </div>
 </div>
 
@@ -60,4 +60,4 @@
   </div>
 </div>
 
-  
+
