--- a/app/views/pages/leaders.html.erb
+++ b/app/views/pages/leaders.html.erb
@@ -60,41 +60,6 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
-        <%= image_tag 'BKragt.png', class: "thumbnail leader-thumb" %>
-      </div>
-      <div class="row leader-title">
-        <h4>Ben Kragt</h4>
-        <h5>Board Member (USA)</h5>
-      </div>
-      <div class="row leader-bio">
-        <p>
-          Ben Kragt lives in Grand Rapids, MI with his wife and two children. He recently completed a 5-year position as Maintenance Director for Pine Valley Bible Camp in Ellwood City, PA. Ben and his family have been called to serve in Uganda and are currently raising support. You can pledge your support to the Kragt family on the <%= link_to "Support Page", support_path %>. Ben is a board member for LOCODI US.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="<%= @col_width %>">
-    <div class="well leader-well">
-      <div class="row leader-photo">
-        <%= image_tag 'BNorberg.png', class: "thumbnail leader-thumb" %>
-      </div>
-      <div class="row leader-title">
-        <h4>Beth Norberg</h4>
-        <h5>General Secretary (US)</h5>
-      </div>
-      <div class="row leader-bio">
-        <p>
-          Beth Norberg, M.A., loves children from around the world. She works as an elementary school teacher in Chicago (USA) and has taught children in Mexico and Spain, but developed a special heart for the children of Uganda when she was called to the country in 2013.
-          <br>The most impactful Bible verse relating to her mission work is 2 Timothy 1:7 "For God has not given us a spirit of timidity, but of power, love and discipline.” Beth is serving as LOCODI US General Secretary.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="<%= @col_width %>">
-    <div class="well leader-well">
-      <div class="row leader-photo">
         <%= image_tag 'EPaul.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
@@ -129,6 +94,23 @@
   <div class="<%= @col_width %>">
     <div class="well leader-well">
       <div class="row leader-photo">
+        <%= image_tag 'BKragt.png', class: "thumbnail leader-thumb" %>
+      </div>
+      <div class="row leader-title">
+        <h4>Ben Kragt</h4>
+        <h5>Ex-officio Board Member (Uganda)</h5>
+      </div>
+      <div class="row leader-bio">
+        <p>
+          Ben Kragt lives in Jinja, Uganda with his wife and two children. He is leading community development initiatives among the rural population. He recently completed a 5-year position as Maintenance Director for Pine Valley Bible Camp in Ellwood City, PA. You can pledge your support to the Kragt family on the <%= link_to "Support Page", support_path %>. Ben is a board member for LOCODI US.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
         <%= image_tag 'BDavid.png', class: "thumbnail leader-thumb" %>
       </div>
       <div class="row leader-title">
@@ -142,6 +124,25 @@
         </p>
       </div>
     </div>
-  </div>
+  </div> -->
+
+
+  <!-- <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= image_tag 'BNorberg.png', class: "thumbnail leader-thumb" %>
+      </div>
+      <div class="row leader-title">
+        <h4>Beth Norberg</h4>
+        <h5>General Secretary (US)</h5>
+      </div>
+      <div class="row leader-bio">
+        <p>
+          Beth Norberg, M.A., loves children from around the world. She works as an elementary school teacher in Chicago (USA) and has taught children in Mexico and Spain, but developed a special heart for the children of Uganda when she was called to the country in 2013.
+          <br>The most impactful Bible verse relating to her mission work is 2 Timothy 1:7 "For God has not given us a spirit of timidity, but of power, love and discipline.” Beth is serving as LOCODI US General Secretary.
+        </p>
+      </div>
+    </div>
+  </div> -->
 
 </div>
