--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -22,20 +22,15 @@
     <li id="sponsor_child">
       <%= link_to icon('child fa-fw') + " Children", sponsor_child_path %>
     </li>
-    <li id="sponsor_pastor">
-      <%= link_to icon('graduation-cap fa-fw') + " Pastors", sponsor_pastor_path %>
-    </li>
-    
+<!-- <li id="sponsor_pastor">
+      link_to icon('graduation-cap fa-fw') + " Pastors", sponsor_pastor_path
+    </li> -->
     <li id="blog" >
       <%= link_to icon('list-alt fa-fw') + " Blog", blog_path %>
     </li>
     <li id="social" >
       <%= link_to icon('share-alt fa-fw') + " Social", social_path %>
     </li>
-    <li id="calendar">
-      <%= link_to icon('calendar fa-fw') + " Calendar", calendar_path %>
-    </li>
-    
   </ul>
 </div>
 
