--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,5 +1,5 @@
-<div class="banner-img-div">
-  <%= image_tag 'child_reading_banner.jpg', class: "banner-img" %>
+<div class="supersized">
+  <%= image_tag 'child_reading_banner.jpg', class: "supersized-image" %>
 </div>
 
 <% if !@blogs.empty? %>
