Styling on Work page

--- a/app/views/pages/_work_div.html.erb
+++ b/app/views/pages/_work_div.html.erb
@@ -1,4 +1,4 @@
-<div class="well blog-entry spacing work-blog" id="<%= index %>">
+<div class="well spacing work-blog" id="<%= index %>">
   <h4 class="work-blog-title">
     <%= blog.css('title').text %>
   </h4>
