--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -33,7 +33,7 @@ div.content-block div.well {
   background-color: rgba(255,255,255,0.65) !important;
 }
 
-// Styling for home page:
+// ****************** Styling for Home page
 
 // Center the Content titles
 h3, h4 {
@@ -63,7 +63,7 @@ h3, h4 {
   margin-right: 2em;
 }
 
-// Styling for support page:
+// ****************** Styling for Support page
 .hysiframe {
   border-radius: 12px;
 }
@@ -81,13 +81,7 @@ h3, h4 {
   width: 100%;
 }
 
-// styling for work page
-.work-img {
-  padding-top: 1em;
-  width: 100%;
-}
-
-// styling for leaders page
+// ****************** styling for leaders page
 .leader-well {
   margin-top: 1em;
   padding: 1em;
@@ -120,7 +114,7 @@ div.content-block {
   margin-bottom: 0px !important;
 }
 
-// Styling for blog page:
+// ****************** Styling for Blog page
 .blog-entry .separator img {
   margin: 1em;
 }
@@ -139,34 +133,6 @@ div.content-block {
   text-overflow: ellipsis;
 }
 
-// Handle blog pics on Work page
-// Hide all photos but the first
-.work-blog-content > .separator ~ .separator {
-  display: none;
-}
-
-// Put the photo to the left
-.work-blog-content > .separator {
-  display: block;
-  text-align: left !important;
-  width: 25%;
-  margin-left: -33%;
-  height: auto;
-}
-
-.work-blog-content > .separator img {
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-}
-
-.work-blog-content {
-  display: block;
-  width: 75%;
-  margin-left: 25%;
-}
 
 // Hide blog titles in buttons on small screen widths
 @media (max-width: 400px) {
@@ -175,15 +141,55 @@ div.content-block {
   }
 }
 
-// Styling for Social page:
+// ****************** Styling for Work page
+.work-blog {
+  float: left;
+  width: 100%;
+  clear: both;
+  overflow: auto;
+}
+
+// Handle blog pics on Work page
+// Hide all photos but the first
+.work-blog-content > .separator ~ .separator {
+  display: none;
+}
+
+// Kill the breaks that pad the photos in the xml
+.work-blog-content br {
+  display: none;
+}
+
+// Put the photo to the left
+.work-blog-content > .separator {
+  float: left;
+  width: 25%;
+  overflow: auto;
+  margin-right: 1em;
+}
+
+
+
+// Constrain the photo to the div
+.work-blog-content > .separator img {
+  // display: block;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  border-radius: 12px;
+}
+
+
+// ****************** Styling for Social page:
 .rebel-mouse {
   margin-bottom: 48px;
 }
 
 // Styling for calendar page:
-#calendar, #calendar_div {
-  min-width: 300px;
-  width: 100%;
-  height: 460px;
-}
+// #calendar, #calendar_div {
+//   min-width: 300px;
+//   width: 100%;
+//   height: 460px;
+// }
 
