--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -7,7 +7,7 @@
     <% @blogs.each_with_index do |blog, index| %>
       <%= render 'blog_div', blog: blog, index: index %>
     <% end %>
-    <p class="text-right">
+    <p class="text-right well">
       <%= link_to "Read more on our blog #{icon('arrow-right')}".html_safe, "http://embracingthelove.blogspot.com", target: :blank %>
     </p>
   </div>
