--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,8 +7,8 @@
     <li id="home">
       <%= link_to icon('home fa-fw') + " Home", root_path  %>
     </li>
-    <li id="work" >
-      <%= link_to icon('fire fa-fw') + " Work", work_path  %>
+    <li id="initiatives" >
+      <%= link_to icon('lightbulb-o fa-fw') + " Initiatives", initiatives_path  %>
     </li>
     <li id="leaders">
       <%= link_to icon('gavel fa-fw') + " Board", leaders_path %>
@@ -17,7 +17,7 @@
       <%= link_to icon('group fa-fw') + " Join Us", join_path %>
     </li>
     <li id="support" >
-      <%= link_to icon('envelope fa-fw') + " Support", support_path %>
+      <%= link_to icon('heart-o fa-fw') + " Support", support_path %>
     </li>
     <li id="sponsor_child">
       <%= link_to icon('child fa-fw') + " Children", sponsor_child_path %>
