--- a/app/views/pages/_work_div.html.erb
+++ b/app/views/pages/_work_div.html.erb
@@ -7,7 +7,7 @@
     <%= raw blog.css('content').text %>
   </div>
   <div class="align-right work-blog-donate">
-    <%= link_to "Support our work", support_path, class: "btn btn-primary support-btn-work" %>
+    <%= link_to icon('heart fa-fw') + " Support our work", support_path, class: "btn btn-primary support-btn-work" %>
   </div>
 </div>
 
