--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5 {
   a {
     color: inherit;
   }
-} 
+}
 
 .unstyled-links {
   a {
@@ -101,7 +101,7 @@ a.styled-link:hover {
   color: #337ab7;
   text-decoration: underline;
 }
-  
+
 
 p {
   font-size: 1.1em;
@@ -147,6 +147,7 @@ body {
   //border: solid 2px;
   min-height: 50px;
   z-index: 2;
+  padding-top: 55px;
 }
 
 .banner-title h1, p {
@@ -156,17 +157,20 @@ body {
 
 #wrapper {
   height: 100%;
-  padding-left: 0;
-  -webkit-transition: all 0.5s ;
-  -moz-transition: all 0.5s ;
-  -o-transition: all 0.5s ;
-  transition: all 0.5s ;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  // padding-left: 0;
+  // -webkit-transition: all 0.5s ;
+  // -moz-transition: all 0.5s ;
+  // -o-transition: all 0.5s ;
+  // transition: all 0.5s ;
 }
 
 #page_body {
   width: 100%;
   display: block;
-  padding-left: 44px;
+  // padding-left: 44px;
   z-index: 1;
 }
 
@@ -233,7 +237,7 @@ body {
 
 // Hide the "created by" section of the footer on skinny screens
 @media ( max-width: 300px ) {
-  
+
 }
 
 // Shrink fonts on skinny screens
@@ -265,6 +269,43 @@ body {
   #created_by {
     display: none;
   }
-  
+
 }
 
+// Style the Navbar
+.navbar-nav li a {
+    padding-right: 4px;
+    padding-left: 4px;
+}
+
+.donate-button {
+  position: relative;
+  float: right;
+  margin-top: 7px;
+  margin-right: 8px;
+
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+// Show different donate buttons based upon screen size
+// Large screens
+@media ( min-width: 768px ) {
+  .navbar-header .donate-button {
+    display: none;
+  }
+}
+
+@media ( min-width: 890px) {
+  .navbar-nav li a {
+      padding-right: 12px;
+      padding-left: 12px;
+  }
+}
+// Small screens
+@media (max-width: 767px) {
+  .navbar-collapse .donate-button {
+    display: none;
+  }
+}
