--- a/app/views/pages/social.html.erb
+++ b/app/views/pages/social.html.erb
@@ -1,7 +1,17 @@
-<div class="banner-img-div">
-  <%= image_tag 'water_banner.jpg', class: "banner-img" %>
+<div class="supersized">
+  <%= image_tag 'water_banner.jpg', class: "supersized-image" %>
 </div>
 
-<div class="rebel-mouse">
-  <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=locodi&flexible=1&dont_load_new_posts=0&more_button=0&post_limit=16&show_rebelnav=0&theme=16"></script>
+<div class="fb-page"
+  data-href="https://www.facebook.com/Locodi"
+  data-tabs="timeline"
+  data-small-header="true"
+  data-adapt-container-width="true"
+  data-hide-cover="false"
+  data-show-facepile="true"
+  data-width="500">
+  <blockquote cite="https://www.facebook.com/Locodi" class="fb-xfbml-parse-ignore">
+    <a href="https://www.facebook.com/Locodi">Loveworld Community Development Initiative - Locodi</a>
+  </blockquote>
 </div>
+
