--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <%= render 'layouts/navbar' %>
   <%= render 'layouts/banner_title' %>
 
-  <div id="wrapper" class="show-sidebar container-fluid">
+  <div id="wrapper" class="container-fluid">
     <div id="page_body" class="container-fluid">
       <%= yield %>
       <div class="page-body-footer-spacer"></div>
