--- a/app/assets/stylesheets/supersize.css.scss
+++ b/app/assets/stylesheets/supersize.css.scss
@@ -25,7 +25,8 @@ $quat-clr-trans:  rgba(32,56,111,.65); //rgba(32,56,111,.65); //dk blue
   img {
     width:auto;
     height:auto;
-    outline:none; border:none;
+    outline:none;
+    border:none;
   }
 }
 
