--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -37,11 +37,7 @@ div.content-block div.well {
   text-align: center;
 }
 
-.centered {
-  width: 214px;
-  margin-right: auto;
-  margin-left: auto;
-}
+
 
 // ****************** Styling for Home page
 
@@ -65,19 +61,38 @@ h3, h4 {
   color: #333 !important;
 }
 
-.image-left {
-  float: left;
+.centered-mega-button-div {
+  width: 214px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.image-right {
-  float: right;
+.country-row {
+  margin-top: 4em;
 }
 
-.missionary-title {
-  margin-top: 6em;
-  margin-bottom: 1.5em;
+.country-text {
+  text-align: center;
+  position: relative;
+  top: 5em;
+  z-index: 3;
+  color: #E5E5E5;
+  text-shadow:
+    // 3px 3px 0 #000,
+    -1px -1px 0 rgba(136,164,210,.5),
+    1px -1px 0 rgba(136,164,210,.5),
+    -1px 1px 0 rgba(136,164,210,.5),
+    1px 1px 0 rgba(136,164,210,.5);
 }
 
+.country-shape {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+}
+
+// ****************** Styling for Missionaries page
 .missionary-div {
   margin-bottom: .5em;
 }
@@ -154,7 +169,7 @@ div.content-block {
   }
 }
 
-// ****************** Styling for Work page
+// ****************** Styling for Initiatives page
 .work-blog {
   float: left;
   width: 80%;
@@ -200,15 +215,4 @@ div.content-block {
   margin-top: 2em;
 }
 
-// ****************** Styling for Social page:
-.rebel-mouse {
-  margin-bottom: 48px;
-}
-
-// Styling for calendar page:
-// #calendar, #calendar_div {
-//   min-width: 300px;
-//   width: 100%;
-//   height: 460px;
-// }
 
