--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,28 +10,19 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="centered">
+    <div class="centered-mega-button-div">
       <%= link_to icon('heart fa-fw') + " Donate", support_path, class: "btn btn-default align-center mega-button" %>
     </div>
   </div>
 </div>
 
-<div class="content-block row missionary-title">
+
+<div class="row country-row">
   <div class="col-xs-12">
-    <h3>Support our missionaries</h3>
+      <h2 class="country-text">Because Uganda needs Love</h2>
+      <%= image_tag 'UGA_outline.png', class: "country-shape" %>
   </div>
 </div>
-<div class="content-block row">
-  <div class="col-xs-12 col-sm-6 missionary-div">
-    <a href="/missionaries?finder=17070">
-      <img src="https://s3-us-west-1.amazonaws.com/hys/347380553bdec359915d1754f3dc6116a098cc0c2.jpg" alt="The Olupots" class="missionary-photo">
-    </a>
-  </div>
-  <div class="col-xs-12 col-sm-6 missionary-div">
-    <a href="/missionaries?finder=17034">
-      <img src="https://s3-us-west-1.amazonaws.com/hys/4ff1085862b9a77b18c528d2bc7cc0a4044c49f61.jpg" alt="The Kragts" class="missionary-photo">
-    </a>
-  </div>
-</div>
+
 
 
