--- a/app/views/pages/initiatives.html.erb
+++ b/app/views/pages/initiatives.html.erb
@@ -5,7 +5,7 @@
 <% if !@blogs.empty? %>
   <div class="content-block row">
     <% @blogs.each_with_index do |blog, index| %>
-      <%= render 'work_div', blog: blog, index: index %>
+      <%= render 'initiatives_div', blog: blog, index: index %>
     <% end %>
   </div>
 <% end %>
