fix scrolling on missionaries hysiframe

--- a/app/views/pages/missionaries.html.erb
+++ b/app/views/pages/missionaries.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="content-block row spacing">
     <div class="col-xs-12">
-      <iframe class="hysiframe" src="https://app.helpyousponsor.com/frontend/<%= @missionary %>" style="border:0px #FFFFFF none;" name="HYSiFrame" scrolling="no" frameborder="1" height="780px" marginheight="0px" marginwidth="0px" width="100%"></iframe>
+      <iframe class="hysiframe" src="https://app.helpyousponsor.com/frontend/<%= @missionary %>" style="border:0px #FFFFFF none;" name="HYSiFrame" scrolling="yes" frameborder="1" height="780px" marginheight="0px" marginwidth="0px" width="100%"></iframe>
       <p class="text-center">Your donations are tax deductible in the United States. LOCODI is a 501c3 organization, EIN# 47-3250222</p>
     </div>
   </div>
